--- a/startbootstrap-grayscale-gh-pages/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/startbootstrap-grayscale-gh-pages/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#Evidencias">Evidencias</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Ficha Técnica</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Herramienta</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                     </ul>
                 </div>
@@ -146,46 +146,91 @@
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
-                <!-- Featured Project Row-->
+                <!-- Featured Project Row-->             
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                    <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project One Row-->
-                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                            
+                               <h2 class="text-back mb-4">ChatPDF</h2>
+                               <div class="row">
+                                <div class="col-md-6 col-sm-8">
+                                    <div class="card mb-5">
+                                        <div class="card-header has-icon">
+                                            <i class="ti-vector text-danger" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="card-body px-4 py-3">
+                                            <h5 class="mb-3 card-title text-dark"></h5>
+                                            <p> 1. Da 3 objetivos especifícos del artículo</p>
+                                           <figure>
+                                            <img src="assets/img/Pregunta1.png" width="400px" height="250px">
+                                            <figcaption>
+                                                <P class="subtitle">Los objetivos específicos del artículo "my.Eskwela: Designing An Enterprise Learning Management System to Increase Social Network and Reduce Cognitive Load" de Orven E. Llantos et al. son: <br>
+
+                                                    1. Diseñar un sistema de gestión del aprendizaje empresarial (LMS) que aumente las capacidades de las redes sociales en entornos educativos. <br>
+                                                    2. Reducir la carga cognitiva de los usuarios mediante la implementación de características de diseño y funcionalidades innovadoras en el LMS. <br>
+                                                    3. Evaluar la aceptación y usabilidad del sistema my.Eskwela mediante una encuesta de aceptación de la tecnología basada en el cuestionario del Modelo de Aceptación de Servicios Móviles (MSAM) [T5].</P>
+                                            </figcaption>
+                                           </figure>
+                                        </div>
+                                    </div>
                                 </div>
+                                <div class="col-md-6 col-sm-8">
+                                    <div class="card mb-5">
+                                        <div class="card-header has-icon">
+                                            <i class="ti-write text-danger" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="card-body px-4 py-3">
+                                            <h5 class="mb-3 card-title text-dark"></h5>
+                                            <p> 2. Para qué quieren reducir la carga cognitiva?</p>
+                                            <figure>
+                                                <img src="assets/img/Pregunta2.png" width="400px" height="250px">
+                                            </figure>
+                                            <P class="subtitle"> Los autores pretenden reducir la carga cognitiva de los usuarios, en concreto de los profesores, que interactúan con el sistema de gestión del aprendizaje empresarial (LMS) denominado my.Eskwela. Mediante la aplicación de características de diseño y funcionalidades innovadoras en el LMS, el objetivo es disminuir el esfuerzo mental necesario para que los profesores comprendan y procesen la información dentro del sistema. La reducción de la carga cognitiva puede mejorar la experiencia del usuario, aumentar la adopción del sistema y, en última instancia, mejorar la eficiencia y eficacia generales de los procesos educativos dentro del sistema escolar del DepEd [T5].</P>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-sm-8">
+                                    <div class="card mb-5">
+                                        <div class="card-header has-icon">
+                                            <i class="ti-package text-danger" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="card-body px-4 py-3">
+                                            <h5 class="mb-3 card-title text-dark"></h5>
+                                            <p> 3. Cuál es el dilema con LIS?</p>
+                                            <img src="assets/img/Pregunta3.png" width="400px" height="250px">
+                                            <P class="subtitle">El dilema con el Sistema de Información para el Aprendizaje (LIS) del Departamento de Educación (DepEd) está relacionado principalmente con problemas de retraso en el tiempo de respuesta, averías ocasionales del sistema y alta carga cognitiva para los usuarios, en particular los profesores. El LIS, que sirve como sistema de información escolar para los alumnos de las escuelas públicas de todo el país, se enfrenta a problemas de adopción por parte de los usuarios debido a estos problemas técnicos. Los profesores deben utilizar el LIS para tareas administrativas como la matriculación de alumnos, la carga de calificaciones y el seguimiento de la información de los estudiantes, pero los problemas de rendimiento del sistema provocan frustración y trabajo adicional a los profesores. A pesar de la importancia del sistema para la toma de decisiones críticas en el sistema educativo, los retrasos y las averías suponen una carga para los profesores que dependen del SIL para su trabajo y las evaluaciones de su rendimiento [T6].</P>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-sm-8">
+                                    <div class="card mb-5">
+                                        <div class="card-header has-icon">
+                                            <i class="ti-map-alt text-danger" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="card-body px-4 py-3">
+                                            <h5 class="mb-3 card-title text-dark"></h5>
+                                            <p> 4. ¿Según el artículo, cuál es el impacto de la interacción social en la interfaz de usuario en la percepción y adopción del sistema?</p>
+                                            <img src="assets/img/Pregunta4.png" width="400px" height="250px">
+                                            <P class="subtitle">El artículo destaca que la incorporación de elementos de interacción social en el diseño de la interfaz de usuario puede influir positivamente en la percepción y adopción del sistema. El sistema my.Eskwela fomenta la socialización a través de elementos como widgets socialmente ricos que incluyen fotos de alumnos y profesores, con el fin de crear una experiencia de usuario más atractiva y conectada. Esta conexión social no sólo mejora la forma en que los usuarios interactúan con los datos, sino que también fomenta un sentido de comunidad y humaniza las interacciones digitales, de forma similar a las plataformas de medios sociales como Facebook. En última instancia, este enfoque puede conducir a una mayor aceptación, satisfacción y adopción del sistema por parte de los usuarios en entornos educativos [T1].</P>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-sm-8">
+                                    <div class="card mb-5">
+                                        <div class="card-header has-icon">
+                                            <i class="ti-bar-chart text-danger" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="card-body px-4 py-3">
+                                            <h5 class="mb-3 card-title text-dark"></h5>
+                                            <p>5. ¿Cuál es la principal diferencia entre un LMS típico y my.Eskwela en cuanto a la participación de los padres en el proceso de enseñanza-aprendizaje?</p>
+                                            <img src="assets/img/Pregunta5.png" width="400px" height="250px">
+                                            <P class="subtitle">La principal diferencia entre un Sistema de Gestión del Aprendizaje (LMS) típico y my.Eskwela radica en la inclusión de un componente para padres en my.Eskwela para mejorar la participación de los padres en el proceso de enseñanza-aprendizaje. Mientras que las plataformas LMS tradicionales se centran principalmente en proporcionar herramientas a los profesores para gestionar recursos, evaluaciones y valoraciones, my.Eskwela redefine el LMS incorporando funciones que facilitan la participación inclusiva de los padres en la educación de sus hijos. Este énfasis en la participación de los padres pretende reforzar la conexión entre la escuela, los profesores, los alumnos y los padres, creando un entorno de aprendizaje más colaborativo y solidario. Al integrar un componente para los padres, my.Eskwela reconoce la importancia del compromiso familiar en la trayectoria educativa y trata de tender un puente entre el hogar y la escuela para lograr un enfoque más holístico del aprendizaje [T6].</P>
+                                        </div>
+                                    </div>
+                                </div>
+                              
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- Project Two Row-->
-                <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+                    </section>
         <!-- Signup-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
