--- a/startbootstrap-grayscale-gh-pages/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/startbootstrap-grayscale-gh-pages/index.html
@@ -19,6 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
+            
                 <a class="navbar-brand" href="#page-top">Inicio</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
@@ -29,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="#Evidencias">Evidencias</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Ficha Técnica</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Herramienta</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">Opinión</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +42,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Base de Datos NTD 51</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Derly Yanneth Rojas Herrera <br> 506221072 <br> Nuevas Tecnologías de Desarrollo <br> Ingeniería de Sistemas <br> Fundación Universitaria Konrad Lorenz <br> 16 de Marzo, 2024</h2>
-                       Masthead<a class="btn btn-primary" href="#about">Get Started</a>
+                       <a class="btn btn-primary" href="#about">Iniciar</a>
                     </div>
                 </div>
             </div>
@@ -128,7 +129,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">Enlace</th>
-                                <td>https://www.sciencedirect.com/science/article/pii/S1877050918317265</td>
+                                <td><a href="#!">https://www.sciencedirect.com/science/article/pii/S1877050918317265</a></td>
                                
                               </tr>
                               <tr>
@@ -140,7 +141,7 @@
 
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img class="img-fluid" src="assets/img/Imagen1.jpg" alt="..." />
             </div>
         </section>
         <!-- Projects-->
